代码调整章节笔记

--- a/articles/代码调整.md
+++ b/articles/代码调整.md
@@ -49,5 +49,47 @@ for (i = 0; i < count; i++) {
 **按照出现的频率来调整判断顺序**         
 安排判断的顺序，让运行最快和判断结果最有可能为真的判断首先执行。也就是说，让程序更容易进入常见情况的处理，如果有低效率的
 情况，那就应该出现在处理非常见的情况时。这样的原则适用于case语句以及if-then-else语句串。     
-
-
+             
+下面就是一个Select-Case语句它负责在字处理程序中对键盘输入进行响应：          
+``` 
+Visual Basic示例：顺序差劲的逻辑判断
+Select inputCharacter
+   Case "+", "="
+      ProcessMathSymbol(inputCharacter)
+   Case "0" To "9"
+      ProcessDigit(inputCharacter)
+   Case ",", ".", ":", ";", "!", "?"
+      ProcessPunctuation(inputCharacter)
+   Case " "
+      ProcessSpace(inputCharacter)
+   Case "A" To "Z", "a" To "z"
+      ProcessAlpha(inputCharacter)
+   Case Else
+      ProcessError(inputCharacter)
+End Select
+```
+如果你能知道输入字符的出现频率，就可以把最常见的情况放在最前面。
+```
+Visual Basic示例：顺序合理的逻辑判断
+Select inputCharacter
+   Case "A" To "Z", "a" To "z"
+         ProcessAlpha(inputCharacter)
+   Case " "
+         ProcessSpace(inputCharacter)
+   Case ",", ".", ":", ";", "!", "?"
+         ProcessPunctuation(inputCharacter)
+   Case "0" To "9"
+         ProcessDigit(inputCharacter)
+   Case "+", "="
+      ProcessMathSymbol(inputCharacter)
+   Case Else
+      ProcessError(inputCharacter)
+End Select
+```
+在优化后的代码中，由于最常见的情况通常会很快发现，直接效果就是更少的判断所带来的性能提升。            
+| 语言        | 调整使用前   | 调整使用后   |  节省的时间 |   
+| --------   | -----:  | :----:  |  ----- |       
+| C#     | 0.220 |   0.260     |   -18%  |  
+| Java   | 2.56  |   2.56   |    0%    |
+| Visual Basic |    0.280    |  0.260  |  %7  |
+   
