--- a/articles/代码调整.md
+++ b/articles/代码调整.md
@@ -86,16 +86,22 @@ Select inputCharacter
       ProcessError(inputCharacter)
 End Select
 ```
-在优化后的代码中，由于最常见的情况通常会很快发现，直接效果就是更少的判断所带来的性能提升。            
-|         |    | 调整使用后   |  节省的时间 |   
-| -   | :-:  | :-:  |  :-: |       
-|      |  |        |   -18%  |  
-|    |   |      |    0%    |                 
-|  |        |    |  %7  |               
+在优化后的代码中，由于最常见的情况通常会很快发现，直接效果就是更少的判断所带来的性能提升。                          
                
 | 语言 | 调整使用前 | 调整使用后 | 节省的时间 |   
 | - | :-: | -: | -: |   
 | C# | 0.220| 0.260 | -18% |   
 | Java | 2.56 | 2.56 | 0% |   
-| Visual Basic | 0.280 | 0.260 | 7% | 
-   
+| Visual Basic | 0.280 | 0.260 | 7% |        
+       
+MicroSoft Visual Basic的结果同预期相同，但Java和C#的表现却出乎我们的意料。显然，原因在于C#和Java中的switch-case语句的组织方式——每一个值都必须单独枚举出来，而不是放在一个范围中处理，因此，这两种语言无法像VB一样从这种优化中得到好处。这样的结果也强调了不要盲从于任何优化建议的重要性——特定编译器实现将会极大地影响到优化结果。     
+            
+或许你会认为，在VB编译器下，对一系列与上面case语句等价的if-then-else语句而言，优化所产生的效果是相似的。请看下面的结果：       
+| 语言 | 调整使用前 | 调整使用后 | 节省的时间 |     
+| - | :-: | -: | -: |   
+| C# | 0.630| 0.330 | 48% |   
+| Java | 0.922 | 0.460 | 50% |   
+| Visual Basic | 1.36 | 1.00 | 26% |     
+结果大不相同。对相同数量的判断，VB在代码优化前后所花费的时间是5:4。这表明编译器为case和if-then-else产生了不同的代码。            
+        
+对C#和VB来说，两者的case语句方案都会比各自的if-then-else方案要快，而在Java中，两个版本的case语句要慢一些。
