--- a/articles/代码调整.md
+++ b/articles/代码调整.md
@@ -215,8 +215,63 @@ if(i == count - 2){
 到这段代码在几页之前仅仅是一个5行的循环，你就会更深刻地体会到性能和可读性之间的此消彼长了。      
 **尽可能减少在循环内部做的工作**        
 编写高效循环的关键在于尽可能减少循环内部所做的工作。如果你可以在循环外面计算某语句或某部分语句，而在循环内部只使用计算结果，那么就把它放到外面。这是一种很好的编程实践，在很多情况下
-还可以改善程序的可能性。         
+还可以改善程序的可读性。         
+     
+假设某频繁使用的循环，其内部有一个复杂的指针表达式，如下：   
+```c++
+//C++示例：循环内部的复杂 指针表达式
+for(i = 0; i < rateCount; i ++) {
+   netRate[i] = baseRate[i] * rates -> discounts -> factors -> net;
+}
+```
+这时，把复杂的指针表达式赋给一个命名准确的变量，不但可以改善代码的可读性，还能提高代码的性能。
+```c++
+//C++示例：简化复杂的指针表达式
+quantityDiscount = rates -> discounts -> factors -> net;
+for(i = 0; i < rateCount; i ++) {
+   netRate[i] = baseRate[i] * quantityDiscount;
+}
+```
+所引用的新变量`quantityDiscount` 清楚地说明了 baseRate 数组中的元素逐个同数量折扣（quantity-discount）因子相乘，计算出了净费用。而在最初的循环表达式中，这样的含义并没有清晰地表达出来。
+把复杂指针表达式转化为循环外变量，同样使得程序在每次循环时节省了指针三次解引用所花费的时间，由此带来改进。     
+     
+**哨兵值（Sentinel Values）**      
+当循环的判断条件是一个复合判断的时候，你可以通过简化判断来节省代码运行时间。如果该循环是一个查找循环，简化方法之一就是使用一个哨兵值（sentinel value），你可以把它放到循环范围的末尾，从而保证循环一定
+能够中止。           
+例子：该循环一方面要检查它是否发现了所要找的值，另一方面要检查它是否遍历了所有的值。代码如下：
+```c#
+//C#示例：搜索循环中的组合判断
+found = FALSE;
+i = 0;
+while((!found) && (i < count)) {
+   if(item[i] == testValue) {
+      found = TRUE;
+   } else {
+      i ++ ;
+   }
+}
+if(found) {
+...
+}
+```
+在这段代码中，每次的循环迭代都要判断 !found 和 i < count 。前者判断是否找到了元素所需要的元素，后者避免循环超出数组末尾。在循环内部，每个 item[] 又要单独判断，
+因此，对每一次迭代来说，循环中实际上有三次判断。          
+在这种类型的查找循环里，你可以把三次判断合并起来，通过在查找范围末尾设置哨兵值的方式中止循环，使每一次的迭代只执行一次判断就可以了。你可以简单地把需要查找的值赋给超过查找范围之外的
+那个元素（在声明数组的时候，切记为该元素留出空间），然后再去检查各个元素。如果是在数组的最后发现了你塞进去的元素，你会明白这实际上并不是需要查找的值。代码如下：     
+```
+C#示例：使用哨兵值来加速循环
+// set snetinel value, preserving the original value
+initialValue = item[count];
+i = 0;
+while(item[i] != testValue) {
+    i ++;
+}
 
+// check if value was found 
+if(i < count) {
+...
+
+```
 
 
 
