--- a/articles/代码调整.md
+++ b/articles/代码调整.md
@@ -262,6 +262,8 @@ if(found) {
 C#示例：使用哨兵值来加速循环
 // set snetinel value, preserving the original value
 initialValue = item[count];
+item[count] = testValue;
+
 i = 0;
 while(item[i] != testValue) {
     i ++;
