--- a/articles/代码调整.md
+++ b/articles/代码调整.md
@@ -274,6 +274,130 @@ if(i < count) {
 ...
 
 ```
+          
+**把最忙的循环放在最内层**     
+在循环嵌套时，需要考虑把哪一个循环放在外面，哪一个放在里面。如例：    
+```java
+//Java 示例： 可以改进的嵌套循环
+for(column = 0; column < 100; column ++) {
+  for(row = 0; row < 5; row ++) {
+    sum = sum + table[row][column];
+  }
+}
+```
+改进的关键在于解决外层循环执行的次数远远多于内层循环这一问题。每次执行的时候，循环都要初始化循环的下标，
+在执行一遍循环代码后将它递增，然后进行检查。循环所执行的总次数是100次外部循环，100*5即500次内部循环，一共
+是600次。如果把内外循环交换，那么将会是5次外部循环，5*100次内部循环，一共是505次。    
+      
+**削减强度**           
+削减强度意味着用多次轻量级运算（例如加法）来代替一次代价高昂的运算（例如乘法）。有时，你的循环内部有一个表达式，
+里面需要把循环下标同某个因子相乘。加法通常会比乘法快，因此如果你能够用每次迭代的数据相加得出相同的结果而避免使用
+乘法，那么代码通常会快一些。使用乘法的例子如下：     
+```
+Visual Basic示例： 乘以循环下标
+For i = 0 to saleCount - 1
+   commossion(i) = (i + 1) * revenue * baseCommission * discount
+Next
+```
+这段代码简单明了，但代价有些高。你可以重写这个循环，通过累加得到乘积，而不是每次去计算。      
+```
+Visual Basic示例：用加不用乘
+incrementalCommission = revenue * baseCommission * discount
+cumulativeCommission = incrementalCommission
+For i = 0 to saleCount - 1
+   commission(i) = cumulativeCommission
+   cumulativeCommission = cumulativeCommission + incrementalCommission
+Next
+```
+使用乘法的代价十分昂贵。这样的改变就像是商家的优惠券，让你在为循环所支付的费用上打个折。在最初的代码中，i的每次迭代都会增加，并且
+需要乘以revenue、baseCommission和discount，首先是1，接下来是2，然后是3，这样继续下去。优化之后，incrementalCommission就等于
+revenue。代码会在每一次循环时把incrementalCommission加到cumulativeCommission上面。在第一次遍历的时候，需要加一次，第二次的时候
+已经加了两次，第三次的时候就已经加了三次，以此类推。这样的效果同incrementalCommission乘以1、乘以2、乘以3等的效果相同，但代价低很多。    
+     
+#### 数据变换
+数据类型的改变同样可以减少程序规模和改进执行速度方面的利器。      
+**使用整型数而不是浮点数**     
+整型数的加法和乘法要比浮点数的相应运算快很多。因此，例如把循环下标从浮点类型改为整型这样的方法能够为代码运行节省很多时间：   
+```
+Visual Basic示例：使用耗时的浮点循环下标
+Dim x As Single
+For x = 0 to 99
+   a(x) = 0
+Next
+```
+与之相对，使用整型下标的Visual Basic循环：    
+```
+Visual Basic示例：使用省时的整数循环下标
+Dim i As Integer
+For i = 0 to 99
+   a(i) = 0
+Next
+```
+        
+
+**数组维度尽可能少**     
+多年来积累的编程智慧表明，处理多维数组的代价是惊人的。如果你使用一维数组组织你的数据而非二维或三维，或许能够节省一些时间。        
+        
+**尽可能减少数组引用**      
+除了避免对二维或三维数组的访问，减少对数组的访问总是有好处的。用这种方法对付重复使用数组里同一元素的循环就是很好的选择。下面的例子
+使用了不必要的数组访问：            
+```
+//C++示例：在循环内部不必要地引用数组元素
+for(discountType = 0; discountType < typeCount; discountType ++) {
+    for(discountLevel = 0; discountLevel < levelCount; discountLevel ++) {
+        rate[discountLevel] = rate[discountLevel] * discount[discountType];
+    }
+}
+```
+在内层循环中，虽然discountLevel发生了改变，但对discount[discountType]的引用就没有变。因此你可以把它从内层循环里面提取出来，这样每次外层循环
+中就只需执行一次数组访问，而不是在每次内层循环中都要执行一次数组访问。
+```
+//C++示例：将数组引用提出循环
+for(discountType = 0; discountType < typeCount; discountType ++) {
+    thisDiscount = discount[discountType];
+    for(discountLevel = 0; discountLevel < levelCount; discountLevel ++) {
+        rate[discountLevel] = rate[discountLevel] * thisDiscount;
+    }
+}
+```
+      
+**使用辅助索引**       
+使用辅助索引的意思就是添加相关数据，使得对某种数据类型的访问更为高效。你可以把相关数据添加到主数据类型中，或者存放到并行结构中。     
+1. 字符串长度索引         
+你可以在不同的字符串存储策略中发现辅助索引的身影。在C语言中，字符串是被一个值为0的字节中止。对Visual Basic字符串而言，在每个字符串的开始位置隐藏
+有一个长度字节，标识该字符串的长度。要确定C语言字符串的长度，程序需要从字符串开始位置对各个字节计数，直到发现0的字节为止。要确定Visual Basic字符
+长度，程序只需要看那看看你长度字节就可以了。Visual Basic长度字节就是一个例子，说明给程序结构增加一个索引，有可能让一些特定的操作——例如计算字符
+串长度——变得更快。      
+你可以把这种为长度添加索引的思想应用到任何可变长度的数据类型上面。在需要知道数据长度的时候，相对于临时计算，提早维护这样的结构长度数据显然更为有效。      
+2. 独立的平行的索引结构    
+有时，与操作数据类型本身相比，操作数据类型的索引会更为有效。尤其是如果数据类型中的条目很大或是难于移动（或许存放在磁盘上），那么对索引排序和查找会比
+直接对数据进行相同操作要快。当每一个数据条目都很大的时候，你可以创建一个辅助结构，里面存放关键码和指向详细信息的指针。如果数据结构条目和辅助结构条目
+的大小差异足够显著，你可以把关键条目存放在内存里，而把数据存放在外部。这使所有的查找和排序都在内存里完成，知道了所需访问条目的具体地址之后，进行一次
+磁盘访问就够了。          
+        
+**使用缓存机制（Use Caching）**    
+缓存机制就是把某些值存起来，使得最常用的值更容易被获取。     
+除了用来磁盘上的记录，缓存机制还能用到其他领域。在Microsoft Windows的字体描绘程序中，一度的性能瓶颈就是在显示每一个字符的时候获取字符宽度。在将
+最近所使用的字符宽度缓存之后，显示速度即提升了大约一倍。       
+你也可以缓存那些需要消耗大量时间进行计算的结果——尤其是在参与计算的参数很简单的时候。      
+缓存的成功取决于访问被缓存元素、创建未缓存元素，以及在缓存中保存新元素等动作相关的代价，同样，缓存信息被请求访问的频率也是重要的元素。在某些情况下，
+成功或许还依赖于硬件所做的缓存。一般而言，如果创建新元素的代价越大，请求相同信息的次数越多，那么缓存就越有价值。同样，访问缓存元素或将新元素存放到
+缓存中的开销越小，缓存体现出的价值就越大。同其他优化技术一样，缓存增加了程序的复杂性，使得程序容易出错。          
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
