--- a/articles/代码调整.md
+++ b/articles/代码调整.md
@@ -383,7 +383,91 @@ for(discountType = 0; discountType < typeCount; discountType ++) {
 缓存的成功取决于访问被缓存元素、创建未缓存元素，以及在缓存中保存新元素等动作相关的代价，同样，缓存信息被请求访问的频率也是重要的元素。在某些情况下，
 成功或许还依赖于硬件所做的缓存。一般而言，如果创建新元素的代价越大，请求相同信息的次数越多，那么缓存就越有价值。同样，访问缓存元素或将新元素存放到
 缓存中的开销越小，缓存体现出的价值就越大。同其他优化技术一样，缓存增加了程序的复杂性，使得程序容易出错。          
+     
+#### 表达式
+**利用代数恒等式**   
+你可以通过代数恒等式，用低代价的操作替代复杂操作。例如，下面两个表达式在逻辑上是等价的：    
+`not a and not b`     
+`not (a or b)`       
+如果选择第二个表达式，你就避免了一次not操作。      
+尽管避免执行一次not操作节省的时间可能微不足道，但这种普遍原则是具有强大威力的。     
+           
+**削弱运算强度**      
+削弱运算强度就是用代价低廉的运算代替高昂的运算。下面就是可能的替代方法：    
+- 用加法代替乘法。
+- 用乘法代替幂乘。
+- 利用三角恒等式代换等价的三角函数。
+- 用long或int来代替longlong整数（但请注意使用机器字长的整数和非机器字长整数所带来的差异）。
+- 用定点数或整型数代替浮点数。
+- 用单精度数代替双精度数。
+- 用移位操作代替整数乘2或除2.
+                
+假设你需要计算一个多项式，如果你已经忘了它们的模样，我得告诉你它们长得就像`Ax² + Bx + C`。字母A、B、C都是系数，x是自变量。计算n阶多项式的代码一般
+都像下面这样：
+```
+Visual Basic示例：多项式求值
+value = coefficient(0)
+For power = 1 To order
+   value = value + coefficient(power) * x^power
+Next
+```
+如果想削减这一计算的强度，你或许会认为求幂这个操作不太顺眼。一种解决办法就是把求幂代换为每次循环做一次的乘法，这也类似于几个小时以前我们用加法代替乘法，
+削减计算强度的示例。下面就是削减计算强度后的多项式求值代码：     
+```
+Visual Basic示例： 多项式求值的强度削减法
+value = coefficient(0)
+powerOfX = x
+For power = 1 to order
+   value = value + coefficient(power) * powerOfX
+   powerOfX = powerOfX * x
+Next
+```
+这样的改动对二次多项式或高次多项式的效果非常显著。
 
+**编译期初始化**               
+如果在一个子程序调用中使用了一个具名常量或是神秘数值，而且它是子程序唯一的参数，这就是一种暗示，你应当提前计算这一数值，把它放到某个常量中，从而避免上面那种
+子程序调用。相同的原则也可以应用到乘法、除法、加法等其他操作上。        
+有一次我需要计算某个以2为底的整数对数，并将结果截断为整数，系统没有计算2为底的对数函数，我就自己写了一个。最方便的方法就是用下面这个对数换底公式：    
+logb x = log x/log b              
+根据这一等式，我写了如下的子程序：          
+```
+C++示例： 用系统函数实现的以2为底的对数函数
+unsigned int Log2(unsigned int x) {
+   return (unsigned int) (log(x) / log(2)); 
+}
+```
+这个函数运行得太慢了，既然log(2)的值不会改变，我就用计算出的0.69314718来代替log(2)，就像下面这样：       
+```
+C++示例：用系统函数和常量实现的以2为底的对数函数
+const double LOG2 = 0.69314718;
+...
+unsigned int Log2(unsigned int x) {
+   return (unsigned int) (log(x) / LOG2);
+}
+```
+log()似乎是最花时间的子程序——比类型转换或除法还要奢侈——你或许希望把对log()的调用砍掉一半，就能省下一半时间。     
+
+**小心系统函数**      
+系统函数运行起来很慢，提供的精度常常也是根本不需要的。举例说，标准的系统数学函数就是按照把宇航员送上月球着陆点的误差不超过两英尺的精度设计的。如果你
+的程序无须如此精确，那么你也根本不用耗费时间去计算它。            
+在上面一个例子中，Log2()子程序返回了一个整型值，但却通过一个浮点log()得到这一结果。对一个整数结果而言，这样做未免小题大做，因此，在我的第一次尝试后，
+我写出了一系列的整数判断，对计算整数结果的log2而言已经足够精确了。下面就是改进后的代码：          
+```
+C++示例： 使用整数的以2为底的对数函数
+unsigned int Log2(unsigned int x) {
+   if (x < 2) return 0;
+   if (x < 4) return 1;
+   if (x < 8) return 2;
+   if (x < 16) return 3;
+   if (x < 32) return 4;
+   if (x < 64) return 5;
+   ...
+   if (x < 2147483648) return 30;
+   return 31;
+}
+```
+
+  
 
 
 
