doc: 修改错别字

--- a/articles/notes/软件设计的哲学-02：注释.md
+++ b/articles/notes/软件设计的哲学-02：注释.md
@@ -101,7 +101,7 @@
 
 好的注释通常以与代码不同的详细程度来解释事物，在某些情况下，注释会更详细，而在某些情况下，代码则不那么详细（更抽象）。
 
-#### 2、选择注释约定俗称的格式（公约）
+#### 2、选择注释约定俗成的格式（公约）
 
 编写注释的第一步是确定注释的公约，例如您要注释的内容和注释的格式。如果你正在使用某些语言的 IDE 进行编程，例如 Java 的  Javadoc，C ++的 Doxygen 或 Go 的  godoc，请遵循工具的约定。这些约定并非是完美的，但这些工具可提供足够的好处来弥补这一缺点。如果在没有现有约定可遵循的环境中进行编程，请尝试从其他类似的语言或项目中采用这些约定；这将使其他开发人员更容易理解和遵守这些公约。
 
@@ -124,7 +124,7 @@
 - 此变量的单位是什么？
 - 边界条件是包容性还是排他性？
 - 如果允许使用空值，则意味着什么？
-- 如果变量引用了最终必须释放或关闭的资源，那么谁负责释放或关闭改资源？
+- 如果变量引用了最终必须释放或关闭的资源，那么谁负责释放或关闭该资源？
 - 是否存在某些对于变量始终不变的属性（不变量），比如“此列表始终包含至少一个条目”？
 
 #### 5、高层级的注释可以增加直观性
