--- a/articles/java/钉钉群聊实现@人接入与代码开发.md
+++ b/articles/java/钉钉群聊实现@人接入与代码开发.md
@@ -220,13 +220,10 @@ RUN cd /srv && mvn clean install -Dmanven.test.skip=true
 FROM openjdk:10.0.2-jre-slim
 
 # 设置时区
-ENV TZ=Asia/Shanghai \
-    DEBIAN_FRONTEND=noninteractive
+ENV TZ=Asia/Shanghai
 
 RUN ln -fs /usr/share/zoneinfo/${TZ} /etc/localtime \
-    && echo "${TZ}" > /etc/timezone \
-    && dpkg-reconfigure --frontend noninteractive tzdata \
-    && rm -rf /var/lib/apt/lists/*
+    && echo "${TZ}" > /etc/timezone
 
 EXPOSE 9090
 
